2007-05-11  Everaldo Canuto  <everaldo@simios.org>

	* ToolBarTest.cs: Add tests for toolbar size (horizontal and vertical),
	also test #81523.

2007-05-10  Everaldo Canuto  <everaldo@simios.org>

	* ToolBarTest.cs: CreateHandleTest added.

2007-05-10  Jonathan Pobst  <monkey@jpobst.com>

	* FormTest.cs: Marking test for bug 81582 as NotWorking as it fails
	on X11.  Bug is reopened.

2007-05-10  Jonathan Pobst  <monkey@jpobst.com>

	* ToolStripItemCollectionTest.cs: Enable tests.

2007-05-10  Rolf Bjarne Kvinge <RKvinge@novell.com> 

	* MaskedTextBoxTest.cs: Added more tests.

2007-05-10  Jonathan Pobst  <monkey@jpobst.com>

	* FormTest.cs: Add test for bug 81582.

2007-05-10  Gert Driesen  <drieseng@users.sourceforge.net>

	* ToolStripItemCollectionTest.cs: Added tests for ctor, Insert and
	Remove.

2007-05-09  Jonathan Pobst  <monkey@jpobst.com>

	* ControlTest.cs: Expand and enable test for UseWaitCursor.

2007-05-09  Jonathan Pobst  <monkey@jpobst.com>

	* ControlTest.cs: Added test for IsInputChar.

2007-05-09  Jonathan Pobst  <monkey@jpobst.com>

	* ControlTest.cs: Added tests for PreProcessMessage and
	PreProcessControlMessage.

2007-05-08  Gert Driesen  <drieseng@users.sourceforge.net>

	* ControlTest.cs: Added test for UseWaitCursor.

2007-05-07  Jonathan Pobst  <monkey@jpobst.com>

	* ControlTest.cs: Tests demonstrating Control.AutoSize from 
	Stefan Noack.

2007-05-07  Jonathan Pobst  <monkey@jpobst.com>

	* ToolStripManagerTest.cs: Add test for bug #81477.

2007-05-04  Jonathan Pobst  <monkey@jpobst.com>

	* ControlTest.cs: Expand GetChildAtPointTest to cover 2.0 cases.

2007-05-04  Rolf Bjarne Kvinge <RKvinge@novell.com> 

	Added.

2007-05-04  Rolf Bjarne Kvinge <RKvinge@novell.com> 

	* MdiFormTest.cs: Added DeactivatedEventTest.

2007-05-03  Chris Toshok  <toshok@ximian.com>

	* DataBindingTests.cs: enable TestInsertRowAtCurrent in the 2.0
	profile as well.

2007-05-03  Jonathan Pobst  <monkey@jpobst.com>
